# autonomous_safety_wheelchair

./: .gitignore  BrianHello.py  README.md  Setup Guide.md  env_setup.sh  hello world  hello.py
install/: local_setup.sh  setup.sh
install/human_dummy/share/ament_index/resource_index/package_run_dependencies/: human_dummy
install/human_dummy/share/ament_index/resource_index/parent_prefix_path/: human_dummy
install/human_dummy/share/human_dummy/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/human_dummy/share/human_dummy/cmake/: human_dummyConfig-version.cmake  human_dummyConfig.cmake
install/human_dummy/share/human_dummy/environment/: ament_prefix_path.dsv  path.dsv
install/human_dummy/share/human_dummy/human/: config.json  human_dummy.sdf  human_dummy.urdf
install/human_dummy/share/human_dummy/human/assets/: foot.part  foot.stl  forearm.part  forearm.stl  hand.part  hand.stl  head.part  head.stl  leftshin.part  leftshin.stl  leftthigh.part  (+11 more)
install/human_dummy/share/human_dummy/launch/: human_dummy.launch.py  start_rviz.launch.py
install/navigation/share/navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/navigation/share/navigation/cmake/: navigationConfig-version.cmake  navigationConfig.cmake
install/navigation/share/navigation/config/: ekf.yaml  gz_bridge.yaml  lidar_filters.yaml  mapper_params_online_async.yaml  mapper_params_online_async1.yaml  nav2_params.yaml  nav2_params_light.yaml
install/navigation/share/navigation/environment/: ament_prefix_path.dsv  path.dsv
install/navigation/share/navigation/launch/: gps_localization.launch.py  nav2_execution.launch.py  nav2_slam.launch.py  slam.launch.py
install/wheelchair_description/share/wheelchair_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/wheelchair_description/share/wheelchair_description/cmake/: ament_cmake_export_dependencies-extras.cmake  wheelchair_descriptionConfig-version.cmake  wheelchair_descriptionConfig.cmake
install/wheelchair_description/share/wheelchair_description/environment/: ament_prefix_path.dsv  path.dsv
install/wheelchair_description/share/wheelchair_description/launch/: rviz_display.launch.py  spawn_gazebo.launch.py
install/wheelchair_description/share/wheelchair_description/wheelchair/: config.json
install/wheelchair_description/share/wheelchair_description/worlds/: Course.sdf  config_course.json  course_world.sdf  empty.sdf  hospital.world  hospital_three_floors.world  hospital_two_floors.world  model.config
install/wheelchair_interfaces/share/wheelchair_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wheelchair_interfaces/share/wheelchair_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  wheelchair_interfacesConfig-version.cmake  wheelchair_interfacesConfig.cmake
install/wheelchair_interfaces/share/wheelchair_interfaces/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
resources/: HumanBackupExport.x_t  SeniorDesign.pod
scripts/: enter_container.sh  env_setup.sh  set_fan_speed.sh  start_ros2_docker.sh
src/Lead_ahead/: CMakeLists.txt  package.xml  setup.py
src/Lead_ahead/Lead_ahead/: Lead_ahead_node.py  follow_behind_node.py
src/Lead_ahead/config/: Lead_ahead_params.yaml
src/Lead_ahead/launch/: Lead_ahead.launch.py  follow_behind.launch.py
src/actor_movement_plugin/: CMakeLists.txt
src/actor_movement_plugin/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/actor_movement_plugin/log/: latest_build
src/actor_movement_plugin/src/: ActorMovementPlugin.cc
src/april_tag_monitor/: CMakeLists.txt  package.xml  setup.py
src/april_tag_monitor/april_tag_model/: model.config  model.sdf
src/april_tag_monitor/april_tag_monitor/: mock_tag_publisher.py  tag_monitor_node.py
src/april_tag_monitor/config/: tag_monitor_params.yaml
src/april_tag_monitor/launch/: tag_monitor.launch.py
src/bringup/: package.xml
src/caregiver/: CMakeLists.txt  package.xml
src/caregiver/launch/: mode_manager_following_only.launch.py
src/caregiver/src/: mode_manager.cpp  publish_caregiver_pos.cpp
src/human_dummy/: CMakeLists.txt  caregiver_pos_publisher.py  package.xml
src/human_dummy/human/: actor_robot.sdf  actor_robot2.sdf  human_dummy.sdf  human_dummy_old.sdf
src/human_dummy/human/assets/: forearm.part  forearm.stl  head.part  head.stl  leftthigh.part  uppertorso.stl  walk2.dae  walk3.dae  walk4.dae  walk5.dae  walk6.dae  walk7.dae
src/navigation/: CMakeLists.txt  package.xml
src/navigation/bt/: caregiver_following_bt.xml
src/navigation/config/: ekf.yaml  gz_bridge.yaml  lidar_filters.yaml  mapper_params_online_async.yaml  mapper_params_online_async1.yaml  nav2_params.yaml  nav2_params_light.yaml  nav2_smac2D_RPP.yaml  nav2_theta_mppi.yaml  scan_filter.yaml
src/navigation/launch/: gps_localization.launch.py  nav2_execution.launch.py  nav2_slam.launch.py  navigation_launch.py  slam.launch.py
src/perception/: package.xml  setup.py
src/wheelchair_description/: CMakeLists.txt  package.xml
src/wheelchair_description/launch/: spawn_gazebo.launch.py
src/wheelchair_description/wheelchair/: config.json  robot.urdf
src/wheelchair_description/wheelchair/assets/: frame.stl
src/wheelchair_description/wheelchair/urdf/: materials.xacro  robot.urdf  robot.xacro
src/wheelchair_description/wheelchair/urdf/macros/: lidar.xacro
src/wheelchair_description/worlds/: config_course.json  course_world.sdf  empty.sdf  model.config
src/wheelchair_description/worlds/assets/: course_world.part
src/wheelchair_gazebo/: CMakeLists.txt  package.xml
src/wheelchair_interfaces/: CMakeLists.txt
src/wheelchair_mux/: CMakeLists.txt  package.xml
src/wheelchair_mux/config/: twist_mux.yaml
src/wheelchair_mux/launch/: controller_mux.launch.py
(+177 files in other folders)
