<?xml version="1.0"?>
<package format="3">
	<name>lead_ahead</name>
	<version>0.1.0</version>
	<description>Lead Ahead node for autonomous wheelchair tag following.</description>

	<maintainer email="Lcott39@gmail.com">LylaOtt</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_python</buildtool_depend>

	<depend>rclpy</depend>
	<depend>geometry_msgs</depend>
	<depend>std_msgs</depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
