<?xml version="1.0"?>
<package format="3">
	<name>april_tag_monitor</name>
	<version>0.1.0</version>
	<description>AprilTag monitor node for front/rear rgb camera logic</description>
	<maintainer email="lcott39@gmail.com">Lyla Ott</maintainer>
	<license>MIT</license>

	
	<buildtool_depend>ament_python</buildtool_depend>
	<exec_depend>python3-setuptools</exec_depend>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>


	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
